# MushroomClassifier

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
pipeline/: dataset.py  train.py
serving/: archive-model.sh  example_query.py  torchserve_start.sh
src/mushroom/: dataset.py  train.py
src/mushroom/models/: resnet18.py
