[metadata]
name = mushroom
description = Mushroom classification
author = Attila Fodor
license = MIT
license_file = LICENSE

[options]
packages =
    mushroom
install_requires =
    numpy
    requests
    Pillow
    pandas
    torch
    torchvision
    tqdm
    scikit-learn
    matplotlib
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160